# robocon17_Jetson

./: README.adoc
detect_cercle/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
detect_cercle/cercle_io/: CMakeLists.txt  README.adoc
detect_cercle/cercle_io/include/: cercle_io_p.h  cercle_io_p.hpp  detect_cercle_cuda.h  detect_cercle_cuda.hpp  detect_cercle_cuda_p.h  detect_cercle_cuda_p.hpp  pole.h  write_cercle.h  write_cercle.hpp  write_cercle_p.h  write_cercle_p.hpp
detect_cercle/cercle_io/src/: cercle_io.cpp  cercle_io.cpp~  detect_cercle_cuda.cu  pole.cpp  write_cercle.cpp
detect_cercle/disp_posi/include/: disp_posi_p.h  disp_posi_p.hpp
detect_cercle/disp_posi/src/: disp_posi.cpp
detect_cercle/line_io/: CMakeLists.txt
detect_cercle/line_io/include/: line_io_p.h  line_io_p.hpp  write_line.h  write_line_p.h
detect_cercle/line_io/src/: line_io.cpp  line_io.cpp~  write_line.cpp
detect_cercle/msg/: Joutput.msg  Joutput.msg~  Jtheta.msg  MBinput.msg  MBinput.msg~
detect_cercle/src/: detect_cercle.cpp  detect_cercle.cpp~  detect_cercle_cuda.cu  detect_cercle_cuda.cu~  line_detect.cpp~  line_detect_cuda.cu~  line_detect_cuda.h~  my_def.h  my_def.h~  pole.cpp  pole.cpp~  pole.h  pole.h~  pole_class.cpp~  pole_class.h~  posi_esti.cpp~  posi_esti_cuda.cu~  test.c  uart.cpp  uart.cpp~  uart.h
detect_cercle/test_pub_data/: CMakeLists.txt  test_pub_data.cpp  test_pub_data.cpp~
detect_cercle/test_sub_data/: CMakeLists.txt  test_sub_data.cpp
detect_cercle/uart/: CMakeLists.txt  MB_uart_communication.cpp  MB_uart_communication.cpp~  MB_uart_communication_p.h  MB_uart_communication_p.hpp
detect_cercle/uart/include/: MB_uart_communication.h  uart.cpp  uart.h  uart.h~  uart_setting.h
detect_cercle/uart/lib/: README.adoc  uart.cpp  uart.cpp~  uart.h  uart_p.h
detect_cercle/uart/src/: MB_uart_communication.cpp  MB_uart_communication.cpp~  MB_uart_communication.h  MB_uart_communication.h~
detect_cercle/urg_connection/: CMakeLists.txt
detect_cercle/urg_connection/include/: connect_LRF_lib.h  connect_LRF_lib_p.h  connect_ethLRF_p.h  connect_usbLRF_p.h  connect_xxxLRF.h  connect_xxxLRF.hpp
detect_cercle/urg_connection/lib/: urg_connection.h  urg_debug.h  urg_detect_os.h  urg_errno.h  urg_ring_buffer.h  urg_sensor.h  urg_serial.h  urg_serial_utils.h  urg_utils.h
detect_cercle/urg_connection/src/: connect_LRF_lib.cpp  connect_LRF_lib.cpp~  connect_ethLRF.cpp  connect_usbLRF.cpp
detect_circle/: CMakeLists.txt  package.xml
detect_circle/circle_io/: CMakeLists.txt
detect_circle/circle_io/include/: circle_io_p.hpp  detect_circle_cuda.hpp  detect_circle_cuda_p.hpp  pole.hpp  write_circle.hpp  write_circle_p.hpp
detect_circle/circle_io/src/: circle_io.cpp  detect_circle_cuda.cu  pole.cpp  write_circle.cpp
detect_circle/disp_posi/: CMakeLists.txt  README.adoc
detect_circle/disp_posi/include/: disp_posi_p.hpp
detect_circle/disp_posi/src/: disp_posi.cpp
detect_circle/disp_situation/: CMakeLists.txt  disp_situation.cpp  disp_situation_p.hpp
detect_circle/line_io/: README.adoc
detect_circle/line_io/include/: line_io_p.hpp  write_line.hpp  write_line_p.hpp
detect_circle/line_io/src/: line_io.cpp  write_line.cpp
detect_circle/msg/: Jcircle.msg  Jline.msg  Joutput.msg  MBinput.msg
detect_circle/test_pub_data/: test_pub_data.cpp
detect_circle/test_sub_data/: CMakeLists.txt  test_sub_data.cpp
detect_circle/uart/: MB_uart_communication.cpp  MB_uart_communication_p.hpp
detect_circle/uart/lib/: CMakeLists.txt  uart.cpp  uart.hpp  uart_p.hpp
detect_circle/urg_connection/: CMakeLists.txt  README.adoc
detect_circle/urg_connection/include/: connect_LRF_lib_p.hpp
detect_circle/urg_connection/lib/: urg_connection.h  urg_debug.h  urg_detect_os.h  urg_errno.h  urg_ring_buffer.h  urg_sensor.h  urg_serial.h  urg_serial_utils.h  urg_utils.h
detect_circle/urg_connection/src/: connect_LRF_lib.cpp  connect_ethLRF.cpp  connect_usbLRF.cpp
fig/: README.adoc
